Fix: footer was off on mobile screen size this was because I wrongly placed .message-box and #input width for larger screens into the mobile/ starting rules, changed this back to 200px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ main {
     padding-top: 0;
     margin-top: 0;
 } */   
-   
+
 #contact-photo {
     background: url("../images/berry-pie-slice-mobile.jpg") no-repeat center center/cover;
     height: 100px;
@@ -275,7 +275,7 @@ th td{
 }
 
 input {
-   width: 300px;
+   width: 200px;
    height: 28px;    
 }
 
@@ -289,7 +289,7 @@ input::placeholder {
 
 .message-box {
    height: 200px;
-   width: 300px;
+   width: 200px;
 
 }
 
